# TP-FINAL-Grupo16

./: CMakeLists.txt  Consigna  README.md  UNITTEST_INFORMATION.md
.github/workflows/: test_1.yml  test_2.yml  test_3.yml  ubuntu.yml
iri/: CMakeLists.txt  iri.hpp
libreria/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
unit-test/: CMakeLists.txt  casos_base.cpp  main_test.cpp
